WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
47207
CSS 2.1 failure: various before-after-* tests fail
https://bugs.webkit.org/show_bug.cgi?id=47207
Summary
CSS 2.1 failure: various before-after-* tests fail
Simon Fraser (smfr)
Reported
2010-10-05 14:02:41 PDT
The following tests fail: html4/before-after-display-types-001 fail html4/before-after-floated-001 fail html4/before-after-images-001 fail html4/before-after-positioned-001 fail html4/before-after-table-parts-001 fail html4/before-after-table-whitespace-001 fail (these are ref tests).
Attachments
Proposed Patch. Fixes ASSERT.
(6.81 KB, patch)
2011-03-16 13:27 PDT
,
Carol Szabo
hyatt
: review+
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
Proposed Patch. Fixed problem with the expected result of my own test
(6.96 KB, patch)
2011-03-22 21:45 PDT
,
Carol Szabo
carol
: commit-queue+
Details
Formatted Diff
Diff
Proposed Patch. Rebased to help the queue
(6.80 KB, patch)
2011-03-22 23:10 PDT
,
Carol Szabo
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
Fix reviewer name in LayoutTests/Changelog.
(6.80 KB, patch)
2011-03-23 08:05 PDT
,
Carol Szabo
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Carol Szabo
Comment 1
2011-03-11 14:09:46 PST
http://test.csswg.org/suites/css2.1/20101210/html4/before-after-display-types-001.htm
causes ASSERT due to the fact that the parent of a CounterRenderer is not an :after or :before renderer. Shall study why and if this is a valid layout shall fix the code.
Carol Szabo
Comment 2
2011-03-11 17:26:09 PST
Have fix for the ASSERT, but test results are still bad. More patches to follow.
Carol Szabo
Comment 3
2011-03-16 13:27:37 PDT
Created
attachment 85962
[details]
Proposed Patch. Fixes ASSERT.
Dave Hyatt
Comment 4
2011-03-22 13:43:11 PDT
Comment on
attachment 85962
[details]
Proposed Patch. Fixes ASSERT. r=me
WebKit Commit Bot
Comment 5
2011-03-22 19:49:52 PDT
Comment on
attachment 85962
[details]
Proposed Patch. Fixes ASSERT. Rejecting
attachment 85962
[details]
from commit-queue. Failed to run "['./Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=cr-jail-3', 'build-..." exit_code: 2 Last 500 characters of output: ........................................................................................................................................................................................................................... fast/css/content ........ fast/css/counters .. fast/css/counters/complex-before.html -> failed Exiting early after 1 failures. 6858 tests run. 151.21s total testing time 6857 test cases (99%) succeeded 1 test case (<1%) had incorrect layout 4 test cases (<1%) had stderr output Full output:
http://queues.webkit.org/results/8221665
Carol Szabo
Comment 6
2011-03-22 21:45:48 PDT
Created
attachment 86569
[details]
Proposed Patch. Fixed problem with the expected result of my own test
Carol Szabo
Comment 7
2011-03-22 23:10:35 PDT
Created
attachment 86573
[details]
Proposed Patch. Rebased to help the queue
WebKit Commit Bot
Comment 8
2011-03-23 00:38:26 PDT
The commit-queue encountered the following flaky tests while processing
attachment 86573
[details]
: inspector/debugger/debugger-pause-on-breakpoint.html
bug 56903
(authors:
pfeldman@chromium.org
and
podivilov@chromium.org
) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 9
2011-03-23 00:40:35 PDT
Comment on
attachment 86573
[details]
Proposed Patch. Rebased to help the queue Rejecting
attachment 86573
[details]
from commit-queue. Failed to run "['./Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=eseidel-cq-sf', 'la..." exit_code: 1 Last 500 characters of output: n/refs/remotes/origin/master/.rev_map.268f45cc-cd09-0410-ab3c-d52691b4dbfc ... Currently at 81753 = 36be2a6c7a82817f77d2fbc4e21f8a04b22af63f
r81754
= 673be2edca398e0a227ccfc535762ebb3c4d7279
r81755
= 3d6040d948ab4c4f2e1f7120297d1a2229ea7136
r81756
= 45e9d313fc334d71db88c8341dfd13b3203b2043 Done rebuilding .git/svn/refs/remotes/origin/master/.rev_map.268f45cc-cd09-0410-ab3c-d52691b4dbfc First, rewinding head to replay your work on top of it... Fast-forwarded master to refs/remotes/origin/master. Full output:
http://queues.webkit.org/results/8224661
Carol Szabo
Comment 10
2011-03-23 08:05:05 PDT
Created
attachment 86617
[details]
Fix reviewer name in LayoutTests/Changelog.
WebKit Commit Bot
Comment 11
2011-03-23 09:39:18 PDT
Comment on
attachment 86617
[details]
Fix reviewer name in LayoutTests/Changelog. Clearing flags on attachment: 86617 Committed
r81778
: <
http://trac.webkit.org/changeset/81778
>
WebKit Commit Bot
Comment 12
2011-03-23 09:39:21 PDT
All reviewed patches have been landed. Closing bug.
Ryosuke Niwa
Comment 13
2011-06-10 22:29:35 PDT
The test added by this patch is failing on GTK:
http://build.webkit.org/results/GTK%20Linux%2032-bit%20Debug/r88586%20(15796)/results.html
http://build.webkit.org/results/GTK%20Linux%2064-bit%20Debug/r88595%20(23266)/results.html
http://build.webkit.org/results/GTK%20Linux%2064-bit%20Debug/r88593%20(23265)/results.html
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug