2011-03-23  Carol Szabo  <carol.szabo@nokia.com>

Reviewed by David Hyatt.

        Added new test to expose failure to correctly find the
        before/after container when creating a CSS counter.

        CSS 2.1 failure: various before-after-* tests fail
        https://bugs.webkit.org/show_bug.cgi?id=47207

        * fast/css/counters/complex-before-expected.txt: Added.
        * fast/css/counters/complex-before.html: Added.
2011-03-23  Carol Szabo  <carol.szabo@nokia.com>

        Reviewed by David Hyatt.

        Modified RenderCounter::originalText() to correctly attach
        the created counter to the before/after container even when
        that is not the RenderCounter's direct parent.

        CSS 2.1 failure: various before-after-* tests fail
        https://bugs.webkit.org/show_bug.cgi?id=47207

        Test: fast/css/counters/complex-before.html

        * rendering/RenderCounter.cpp:
        (WebCore::RenderCounter::originalText):

Canonical link: https://commits.webkit.org/71602@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@81778 268f45cc-cd09-0410-ab3c-d52691b4dbfc